--- a/Bulli Code/FMSynth/Builds/VisualStudio2013/FMSynth.vcxproj
+++ b/Bulli Code/FMSynth/Builds/VisualStudio2013/FMSynth.vcxproj
@@ -130,6 +130,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\DefaultEnvelope.cpp" />
+    <ClCompile Include="..\..\Source\DoubleFMGenerator.cpp" />
+    <ClCompile Include="..\..\Source\FeedbackFMGenerator.cpp" />
     <ClCompile Include="..\..\Source\FMGenerator.cpp" />
     <ClCompile Include="..\..\Source\MainComponent.cpp" />
     <ClCompile Include="..\..\Source\Main.cpp" />
@@ -1257,7 +1259,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\DefaultEnvelope.h" />
+    <ClInclude Include="..\..\Source\DoubleFMGenerator.h" />
     <ClInclude Include="..\..\Source\Envelope.h" />
+    <ClInclude Include="..\..\Source\FeedbackFMGenerator.h" />
     <ClInclude Include="..\..\Source\FMGenerator.h" />
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_audio_basics\buffers\juce_AudioDataConverters.h" />
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_audio_basics\buffers\juce_AudioSampleBuffer.h" />
@@ -1712,6 +1716,7 @@
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_video\juce_video.h" />
     <ClInclude Include="..\..\JuceLibraryCode\AppConfig.h" />
     <ClInclude Include="..\..\JuceLibraryCode\JuceHeader.h" />
+    <ClInclude Include="..\..\Source\Generator.h" />
     <ClInclude Include="..\..\Source\RepaintTimer.h" />
     <ClInclude Include="..\..\Source\TimeHelper.h" />
     <ClInclude Include="..\..\Source\Wave.h" />
